<resources>
    <string name="app_name">Calculadora de IMC</string>
    <string name="teste">Pagina do IMC moleque</string>
    <string name="menu_imc">Calcular IMC</string>
    <string name="menu_form">Cadastro</string>
    <string name="menu_about">Sobre</string>
    <string name="seu_imc">Seu IMC é</string>
    <string name="padrao">00</string>
    <string name="calcular">Calcular</string>
    <string name="obeso">Obeso</string>
    <string name="tv_cadastro">Fazer cadastro</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_data_de_nascimento">Data de nascimento</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="string_cadastrar">Cadastrar</string>
    <string name="name">Victor Motta Del Bianco</string>
    <string name="infos">27 anos, São Paulo - SP</string>
    <string name="email">victormottabianco@gmail.com</string>
    <string name="redes">Redes:</string>
    <string name="social_media">/victormotta94</string>
</resources>